# GraphCPP

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.txt  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/dag/: CMakeLists.txt  main.cpp
examples/end-to-end/: main.cpp
examples/pseudo-graph/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/graph/concrete/: DAG.tpp  ExecutionGraph.tpp  PseudoGraph.tpp
include/graph/helpers/: assertions.h
include/graph/interface/: Graph.tpp  Node.tpp
tests/: CMakeLists.txt
tests/concrete/: CMakeLists.txt  TestDAG.cpp  TestPseudoGraph.cpp
